[gd_scene load_steps=5 format=3 uid="uid://pg8rt4js4ahp"]

[ext_resource type="Script" path="res://scripts/turretScripts/turret.gd" id="1_bdg1w"]
[ext_resource type="Texture2D" uid="uid://dvtygejvu5n2n" path="res://assets/turret_1.png" id="2_amijv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l1x0x"]
radius = 82.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlivr"]
size = Vector2(30, 30)

[node name="turret" type="Node2D"]
script = ExtResource("1_bdg1w")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_amijv")

[node name="rangeArea2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="rangeArea2D"]
shape = SubResource("CircleShape2D_l1x0x")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_tlivr")

[connection signal="area_entered" from="rangeArea2D" to="." method="_on_range_area_2d_area_entered"]
[connection signal="area_exited" from="rangeArea2D" to="." method="_on_range_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
